[package]
edition = "2021"
name = "vienna"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fraction = "0.13"
serde = {version = "1.0", features = ["derive"], optional = true}

[features]
serde = ["dep:serde", "fraction/with-serde-support"]
